[project]
name = "live-sports-odds-engine"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "djangorestframework>=3.17.1",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "polymarket-client>=0.1.0b7",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "sqlalchemy>=2.0.50",
    "structlog>=26.1.0",
    "tenacity>=9.1.4",
    "websocket-client>=1.9.0",
    "websockets>=15.0.1",
]
packages = ["src"]
